--- a/airline/templates/booking.html
+++ b/airline/templates/booking.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block content %}
 <div class="row mt-4">
@@ -16,10 +17,10 @@
           <!-- Passenger Selection -->
           <div class="mb-4">
             <label class="form-label fw-bold">Select Passenger</label>
-            <select name="passenger_id" class="form-select form-select-lg" required>
+            <select name="passenger_id" class="form-select form-select-lg" required id="passenger">
               <option value="" disabled selected>-- Choose a Passenger --</option>
               {% for p in passengers %}
-              <option value="{{ p.passenger_id }}">{{ p.last_name }}, {{ p.first_name }} (ID: {{ p.passenger_id }})
+              <option value="{{ p.passenger_id }}">{{ p.last_name }}, {{ p.first_name }} {% if user.is_superuser %} (ID: {{ p.passenger_id }}) {% endif %}
               </option>
               {% endfor %}
             </select>
@@ -32,7 +33,7 @@
           <!-- Flight Selection -->
           <div class="mb-4">
             <label class="form-label fw-bold">Select Flight</label>
-            <select name="flight_id" class="form-select form-select-lg" required>
+            <select name="flight_id" class="form-select form-select-lg" required id="flight">
               <option value="" disabled selected>-- Choose a Flight --</option>
               {% for f in flights %}
               <option value="{{ f.flight_no }}">
@@ -48,11 +49,11 @@
           <div class="mb-4">
             <label class="form-label fw-bold">Ticket Price ($)</label>
             <div class="input-group">
-              <span class="input-group-text">$</span>
-              <input type="number" name="price" class="form-control form-control-lg" placeholder="0.00" step="0.01"
-                required>
+              <span class="input-group-text">Php</span>
+              <input name="price" class="form-control form-control-lg" placeholder="0.00" step="0.01"
+                required readonly id="price">
             </div>
-            
+
             <div class="form-text">
               Would you like to pre-order flight consumables?
               <a href="/admin/airline/bookingitem/add/" target="_blank">Request an item here.</a>
@@ -69,4 +70,6 @@
     </div>
   </div>
 </div>
+
+<script src="{% static 'price.js' %}"></script>
 {% endblock %}
